--- a/client/views/index.html
+++ b/client/views/index.html
@@ -63,7 +63,7 @@
       <div class="chat-wrap" ng-show="user.status" >
         <div id="accordion" class="ul" ng-repeat="chat in chatsData" role="tablist" aria-multiselectable="true">
           <div class="chatTitle">
-            <p>&nbsp;  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{chat.id}}" aria-expanded="true" aria-controls="collapse{{chat.id}}"><span ng-hide="user.username == chatUsers[chat.id][0].username"><strong>{{chatUsers[chat.id][0].username}}</strong></span><span ng-hide="user.username == chatUsers[chat.id][1].username"><strong>{{chatUsers[chat.id][1].username}}</strong></span></a><i ng-show="actions['typing'][chat.id]" style="font-size: 11px;">(typing)<span id="typing" ></span></i></p>
+            <p>&nbsp;  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{chat.id}}" aria-expanded="true" aria-controls="collapse{{chat.id}}"><span ng-hide="user.username == chatUsers[chat.id][0].username"><i ng-class="active(chatUsers[chat.id][0].status)" class="fa fa-circle"></i> <strong>{{chatUsers[chat.id][0].username}}</strong></span><span ng-hide="user.username == chatUsers[chat.id][1].username"><i ng-class="active(chatUsers[chat.id][1].status)" class="fa fa-circle"></i> <strong>{{chatUsers[chat.id][1].username}}</strong></span></a><i ng-show="actions['typing'][chat.id]" style="font-size: 11px;">(typing)<span id="typing" ></span></i></p>
           </div>
           <div id="collapse{{chat.id}}" class="panel-collapse collapse collapse-wrap" role="tabpanel">
             <div class="messagesBox" scroll-glue >
