--- a/client/views/index.html
+++ b/client/views/index.html
@@ -32,7 +32,7 @@
       <div class="header">
         <h1 style="text-align: left;">ExpressChat</h1>
         <!-- </br> -->
-        <p style="font-size: 18px; width: 50%; float: left; text-align: left; display: inline;" ng-show="user.status"><button type="submit" class="btn btn-primary btn-sm" style="display: inline;" ng-click="logOut()">Log Out</button>&nbsp;&nbsp;{{user.username}}</p></br>
+        <p ng-show="user.status"><button type="submit" class="btn btn-primary btn-sm" style="display: inline;" ng-click="logOut()">Log Out</button>&nbsp;&nbsp;{{user.username}}</p><div class="spacer"></div>
         <!-- <div
           class="fb-like"
           data-share="true"
@@ -45,11 +45,11 @@
       </br>
       <form id="chatCreateForm" ng-show="user.status">
         &nbsp;
-        <p style="display: inline;">&nbsp;Start a new chat</p>
+        <label class="">&nbsp;Start a new chat</label>
         <input type="text" class="form-control input-sm" placeholder="Enter Username..." ng-model="chatCreateData.username">
         <button class="btn btn-primary btn-sm" ng-click="createChat()">New Chat</button>
         <div id="usersAccordion" class="ul" ng-repeat="chat in chatsData" role="tablist" aria-multiselectable="true">
-          <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseUsers" aria-expanded="true" aria-controls="collapse{{chat.id}}"><strong>Users</strong></a>
+          <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseUsers" aria-expanded="true" aria-controls="collapse{{chat.id}}"><strong>Find Users</strong></a>
           <div id="collapseUsers" class="panel-collapse collapse collapse-wrap">
             <div ng-repeat="user in users">
               <div class="user-wrap">
@@ -115,18 +115,18 @@
         <form>
             <div>
                 <label>Username:</label>
-                <input class="form-control input-lg" type="text" name="username" ng-model="userData.username"/>
+                <input class="form-control input-sm" type="text" name="username" ng-model="userData.username"/>
             </div>
             <div>
                 <label>Password:</label>
-                <input class="form-control input-lg" type="password" name="password" ng-model="userData.password"/>
+                <input class="form-control input-sm" type="password" name="password" ng-model="userData.password"/>
             </div>
             <div>
                 <label>Provider</label>
-                <input class="form-control input-lg" type="provider" name="provider" ng-model="userData.provider"/>
+                <input class="form-control input-sm" type="provider" placeholder="Probably &quot;local&quot;..." name="provider" ng-model="userData.provider"/>
             </div>
             <div>
-                &nbsp;</br><input class="btn btn-primary btn-lg" type="submit" value="Sign Up" ng-click="createUser()"/>
+                &nbsp;</br><input class="btn btn-primary btn-sm" type="submit" value="Sign Up" ng-click="createUser()"/>
             </div>
         </form>
       </div>
@@ -134,14 +134,14 @@
           <p>Log in</p>
           <div>
               <label>Username:</label>
-              <input class="form-control input-lg" type="text" name="username"/>
+              <input class="form-control input-sm" type="text" name="username"/>
           </div>
           <div>
               <label>Password:</label>
-              <input class="form-control input-lg" type="password" name="password"/>
+              <input class="form-control input-sm" type="password" name="password"/>
           </div>
           <div>
-              <br/><input class="btn btn-primary btn-lg" type="submit" value="Log In"/>
+              <br/><input class="btn btn-primary btn-sm" type="submit" value="Log In"/>
           </div>
       </form>
       <br/>
