--- a/client/views/index.html
+++ b/client/views/index.html
@@ -62,10 +62,10 @@
       </form>
       <div class="chat-wrap" ng-show="user.status" >
         <div id="accordion" class="ul" ng-repeat="chat in chatsData" role="tablist" aria-multiselectable="true">
-          <div class="chatTitle">
-            <p>&nbsp;  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{chat.id}}" aria-expanded="true" aria-controls="collapse{{chat.id}}"><span ng-hide="user.username == chatUsers[chat.id][0].username"><i ng-class="active(chatUsers[chat.id][0].status)" class="fa fa-circle"></i> <strong>{{chatUsers[chat.id][0].username}}</strong></span><span ng-hide="user.username == chatUsers[chat.id][1].username"><i ng-class="active(chatUsers[chat.id][1].status)" class="fa fa-circle"></i> <strong>{{chatUsers[chat.id][1].username}}</strong></span></a><i ng-show="actions['typing'][chat.id]" style="font-size: 11px;">(typing)<span id="typing" ></span></i></p>
+          <div class="chatTitle" ng-click="hideAlert(chat.id)">
+            <p>&nbsp;  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapse{{chat.id}}" aria-expanded="true" aria-controls="collapse{{chat.id}}"><span ng-hide="user.username == chatUsers[chat.id][0].username"><i ng-class="active(chatUsers[chat.id][0].status)" class="fa fa-circle"></i> <strong>{{chatUsers[chat.id][0].username}}</strong></span><span ng-hide="user.username == chatUsers[chat.id][1].username"><i ng-class="active(chatUsers[chat.id][1].status)" class="fa fa-circle"></i> <strong>{{chatUsers[chat.id][1].username}}</strong></span></a><i ng-show="actions['typing'][chat.id]" style="font-size: 11px;">(typing)<span id="typing" ></span></i>&nbsp;<i class="msgAlert{{chat.id}} hide fa fa-bolt"></i></p>
           </div>
-          <div id="collapse{{chat.id}}" class="panel-collapse collapse collapse-wrap" role="tabpanel">
+          <div id="collapse{{chat.id}}" ng-click="hideAlert(chat.id)" ng-mouseover="hideAlert(chat.id)"  class="panel-collapse collapse collapse-wrap" role="tabpanel">
             <div class="messagesBox" scroll-glue >
               <div ng-class="isMe(message.user_id)" class="message ul" ng-repeat="message in chat.messages" >
                 <div class="li">{{ message.text }}<span ng-show="user.id == message.user_id" class="deleteBox">&nbsp;&nbsp;<input type="checkbox" ng-click="deleteMessage(message.id, chat.id)">&nbsp;Delete</span></div>
@@ -75,7 +75,7 @@
             <div class="message-form" style="margin: 5px;">
               <form ng-submit="createMessage(chat.id, newMessageData[chat.id].text)">
                 <div class="form-group">
-                  <input type="text" name="messageFor{{chat.id}}" class="messageforChat{{chat.id}} messageInput form-control input-lg" placeholder="Send a message..." ng-keypress="typing(chat.id)" ng-model="newMessageData[chat.id].text">
+                  <input type="text" name="messageFor{{chat.id}}" class="messageforChat{{chat.id}} messageInput form-control input-lg" placeholder="Send a message..." ng-keypress="typing(chat.id)" ng-model="newMessageData[chat.id].text" ng-mouseover="hideAlert(chat.id)">
                 </div>
                 <button class="message-send" type="submit" class="btn btn-primary btn-sm" style=""></button>
               </form>
