configures angular-flash

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -164,6 +164,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.6.0/ui-bootstrap-tpls.min.js"></script>       
     <script src="javascripts/app.js"></script>
     <script type="text/javascript" src="javascripts/indexScripts.js"></script>
+    <script type="text/javascript" src="javascripts/angular-flash.min.js"></script>
     <!-- //Remove ui-bootstrap? -->
   </body>
 </html>
