--- a/client/public/stylesheets/style.css
+++ b/client/public/stylesheets/style.css
@@ -6,6 +6,7 @@
         color: #337ab7;
         line-height: 30px;
         text-decoration: none;
+        outline: 0 !important;
       }
       a:hover, a:focus, a:visited{
         text-decoration: none;
