--- a/client/views/index.html
+++ b/client/views/index.html
@@ -151,7 +151,7 @@
     <!-- <input class="btn btn-primary btn-lg" type="submit" value="FB Log in" ng-click="fBAuthenticate()"/> -->
     </div>
     <script src="http://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
-    <script src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="http://desolate-brook-8350.herokuapp.com/socket.io/socket.io.js"></script>
     <script>
       var socket = io();
     </script>
