update server listen port to dynamic app port

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -161,10 +161,10 @@
     <script src="https://cdn.rawgit.com/Luegg/angularjs-scroll-glue/master/src/scrollglue.js"></script>
     <script type="text/javascript" src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.2/ui-bootstrap.min.js"></script>   
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.6.0/ui-bootstrap-tpls.min.js"></script>       
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.6.0/ui-bootstrap-tpls.min.js"></script>    <script type="text/javascript" src="javascripts/indexScripts.js"></script>
+    <script type="text/javascript" src="javascripts/angular-flash.min.js"></script>       
     <script src="javascripts/app.js"></script>
-    <script type="text/javascript" src="javascripts/indexScripts.js"></script>
-    <script type="text/javascript" src="javascripts/angular-flash.min.js"></script>
+
     <!-- //Remove ui-bootstrap? -->
   </body>
 </html>
