--- a/client/views/index.html
+++ b/client/views/index.html
@@ -151,7 +151,7 @@
     <!-- <input class="btn btn-primary btn-lg" type="submit" value="FB Log in" ng-click="fBAuthenticate()"/> -->
     </div>
     <script src="http://code.jquery.com/jquery-1.11.2.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="http://desolate-brook-8350.herokuapp.com/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script>
       var socket = io();
     </script>
@@ -161,10 +161,10 @@
     <script src="https://cdn.rawgit.com/Luegg/angularjs-scroll-glue/master/src/scrollglue.js"></script>
     <script type="text/javascript" src="bower_components/angular-ui-tree/dist/angular-ui-tree.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.13.2/ui-bootstrap.min.js"></script>   
-    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.6.0/ui-bootstrap-tpls.min.js"></script>    <script type="text/javascript" src="javascripts/indexScripts.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.6.0/ui-bootstrap-tpls.min.js"></script>    
+    <script type="text/javascript" src="javascripts/indexScripts.js"></script>
     <script type="text/javascript" src="javascripts/angular-flash.min.js"></script>       
     <script src="javascripts/app.js"></script>
-
     <!-- //Remove ui-bootstrap? -->
   </body>
 </html>
